# ChangeLog for Gentoo System Intialization core utilities.
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
# $Header$

10 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * Makefile
        * depend.c
        * simple-regex.c: Override the debug/warning CFLAGS.  Kill a few
        warnings.

23 Feb 2005 Martin Schlemmer <azarah@gentoo.org>

        * misc.c: Fix memory leak in mktree().

18 Feb 2005 Martin Schlemmer <azarah@gentoo.org>

        * Makefile: Add -fbounds-checking support when DEBUG=1.
        
        * misc.h: Scrap STRING_LIST_FOR_EACH_SAFE() and recode from scratch
        fixing invalid pointer operations.
        
        * misc.c: Remove the last strlen() from strndup() that caused an
        overrun.

17 Feb 2005 Martin Schlemmer <azarah@gentoo.org>:

        * misc.c: Fix overrun in strndup(), thanks to report from
        Ned Ludd <solar@gentoo.org>.

        * debug.h
        * misc.h
        * simple-regex.c: Print debug/errors to stderr, patch from
        Ned Ludd <solar@gentoo.org>.

        * debug.h: Replace invalid EXIT_FAILSTATUS with EXIT_FAILURE.
        
        * parse.c: Modify parse_print_body() to be more ash friendly.
        Suggestions from Ned Ludd <solar@gentoo.org>.

        * debug.h: Remove the 'errno = ESPIPE' in DBG_MSG() for now, as it
        seems to be fixed by the select() changes.

        * parse.c: Disable write select() for now, as it is not needed.

        * depscan.c: Only print EINFO msg if we actually update the cache.
        
        * parse.c: Rename write_output() macro to PRINT_TO_BUFFER().

        * parse.c
        * parse.h: Rewrote large parts of generate_stage[12]() and their
        machanics to use select() when writing to the pipes.  This fixes a
        buffering issue where too much data would cause the write to be
        truncated, and the read pipe would then wait forever.

        * misc.c: Fix gbasename() to compile under gcc-2.95.3.
        