@@ -1,2 +1,3 @@
 *.o
 depscan
+test-regex
